--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "@testing-library/user-event": "^7.2.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
+    "protractor": "^5.4.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "webdriver-manager": "^12.1.7"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "BROWSER=none react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "prepare-test": "webdriver-manager update && webdriver-manager start",
+    "test": "protractor conf.js",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
