--- a/package.json
+++ b/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "protractor": "^5.4.2",
+    "rc-slider": "^9.2.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.4.0",
+    "recharts": "^2.0.0-beta.1",
     "webdriver-manager": "^12.1.7"
   },
   "scripts": {
